update to use confusion matrix

--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +43,14 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/site-packages/teradataml/context/context.py:185: UserWarning: [Teradata][teradataml](TDML_2002) Overwriting an existing context associated with Teradata Vantage Connection. Most of the operations on any teradataml DataFrames created before this will not work.\n",
-      "  warnings.warn(Messages.get_message(MessageCodes.OVERWRITE_CONTEXT))\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Engine(teradatasql://vantagedb:***@tddb-env-d-425.vantage.demo.intellicloud.teradata.com)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +211,7 @@
        "4   33            1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +250,7 @@
        "(600, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +279,7 @@
        "count         600       600     600       600           600     600       600     600         600      600"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,16 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e66b860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1604f7f0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -330,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -352,16 +354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from teradataml.analytics.mle import XGBoost, XGBoostPredict, DecisionForest"
+    "from teradataml.analytics.mle import XGBoost, XGBoostPredict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +382,7 @@
      "text": [
       "SELECT * FROM XGBoost(\n",
       "\tON \"PIMA_TRAIN\" AS InputTable\n",
-      "\tOUT TABLE OutputTable(VANTAGEDB.ml__td_xgboost0_1570114403991388)\n",
+      "\tOUT TABLE OutputTable(VANTAGEDB.ml__td_xgboost0_1570180302623354)\n",
       "\tUSING\n",
       "\tIdColumn('idx')\n",
       "\tMaxDepth('10')\n",
@@ -388,15 +390,15 @@
       "\tNumericInputs('numtimesprg','plglcconc','bloodp','skinthick','twohourserins','bmi','dipedfunc','age')\n",
       ") as sqlmr\n",
       "   tree_id  iter  class_num                                               tree                                  region_prediction\n",
-      "0        3     6          0  {\"sum_\":63.830157449999945,\"sumSq_\":90.3921242...  {\"1024\":0.067178145,\"1025\":0.016580524,\"1026\":...\n",
-      "1        3    10          0  {\"sum_\":48.758744500000006,\"sumSq_\":65.8426560...  {\"1024\":0.05200237,\"1025\":0.017639743,\"258\":0....\n",
-      "2        3     5          0  {\"sum_\":68.38344050000003,\"sumSq_\":98.87712542...  {\"1024\":0.07084968,\"1025\":0.016892144,\"1026\":0...\n",
-      "3        3     8          0  {\"sum_\":56.02086118000002,\"sumSq_\":76.57277944...  {\"1024\":0.061396465,\"1025\":0.015982764,\"514\":0...\n",
-      "4        3     3          1  {\"sum_\":-77.01988000000006,\"sumSq_\":117.288007...  {\"1024\":-0.056000292,\"513\":-0.02812668,\"1025\":...\n",
-      "5        3     7          0  {\"sum_\":59.76545767999994,\"sumSq_\":82.95112083...  {\"1024\":0.06407021,\"1025\":0.01627749,\"1026\":0....\n",
-      "6        3     4          0  {\"sum_\":72.56045149000008,\"sumSq_\":107.5795949...  {\"1024\":0.055251826,\"1025\":0.047791507,\"1026\":...\n",
-      "7        3     4          1  {\"sum_\":-72.56045164999999,\"sumSq_\":107.579594...  {\"1024\":-0.055251826,\"1025\":-0.047791496,\"1026...\n",
-      "8        3     8          1  {\"sum_\":-56.02085948,\"sumSq_\":76.5727789245714...  {\"1024\":-0.061396476,\"1025\":-0.015982762,\"1026...\n",
+      "0        3     8          0  {\"sum_\":56.02086118000002,\"sumSq_\":76.57277944...  {\"1024\":0.061396465,\"1025\":0.015982764,\"514\":0...\n",
+      "1        3     6          1  {\"sum_\":-63.83015737999998,\"sumSq_\":90.3921232...  {\"1024\":-0.06717814,\"1025\":-0.016580526,\"514\":...\n",
+      "2        3     7          0  {\"sum_\":59.76545767999994,\"sumSq_\":82.95112083...  {\"1024\":0.06407021,\"1025\":0.01627749,\"1026\":0....\n",
+      "3        3     4          1  {\"sum_\":-72.56045164999999,\"sumSq_\":107.579594...  {\"1024\":-0.055251826,\"1025\":-0.047791496,\"1026...\n",
+      "4        3     4          0  {\"sum_\":72.56045149000008,\"sumSq_\":107.5795949...  {\"1024\":0.055251826,\"1025\":0.047791507,\"1026\":...\n",
+      "5        3     3          1  {\"sum_\":-77.01988000000006,\"sumSq_\":117.288007...  {\"1024\":-0.056000292,\"513\":-0.02812668,\"1025\":...\n",
+      "6        3    10          0  {\"sum_\":48.758744500000006,\"sumSq_\":65.8426560...  {\"1024\":0.05200237,\"1025\":0.017639743,\"258\":0....\n",
+      "7        3     5          0  {\"sum_\":68.38344050000003,\"sumSq_\":98.87712542...  {\"1024\":0.07084968,\"1025\":0.016892144,\"1026\":0...\n",
+      "8        3     9          1  {\"sum_\":-52.56896038000002,\"sumSq_\":70.9917271...  {\"1024\":-0.05906244,\"1025\":-0.015696079,\"1026\"...\n",
       "9        3     9          0  {\"sum_\":52.568961549999976,\"sumSq_\":70.9917259...  {\"1024\":0.05906244,\"1025\":0.015696079,\"1026\":0...\n"
      ]
     }
@@ -419,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -458,31 +460,31 @@
     {
      "data": {
       "text/plain": [
-       "  tree_id iter class_num                                               tree                                  region_prediction\n",
-       "0       4    8         0  {\"sum_\":33.31977638999997,\"sumSq_\":38.10002362...  {\"8\":-0.017435024,\"20\":-0.017435024,\"24\":0.026...\n",
-       "1       4    3         0  {\"sum_\":45.89293113999996,\"sumSq_\":57.95448035...  {\"8\":-0.019214401,\"20\":-0.019214401,\"24\":0.030...\n",
-       "2       4    2         1  {\"sum_\":-49.2413891299999,\"sumSq_\":64.09951866...  {\"8\":0.019601619,\"1804\":0.031160424,\"1805\":0.0...\n",
-       "3       4   10         0  {\"sum_\":29.79768822,\"sumSq_\":33.17153981214950...  {\"260\":0.015629984,\"261\":0.015555485,\"262\":0.0...\n",
-       "4       4   10         1  {\"sum_\":-29.79768797000003,\"sumSq_\":33.1715395...  {\"256\":-0.015629983,\"257\":-0.015555482,\"258\":-...\n",
-       "5       4    1         0  {\"sum_\":54.0,\"sumSq_\":74.0,\"size_\":296,\"id_\":1...  {\"8\":-0.019999998,\"12\":0.05,\"146\":-0.019999998...\n",
-       "6       4    4         1  {\"sum_\":-42.889883430000005,\"sumSq_\":52.586603...  {\"8\":0.018838037,\"1804\":0.01771014,\"1805\":0.02...\n",
-       "7       4    5         1  {\"sum_\":-40.21089968000004,\"sumSq_\":48.1650140...  {\"8\":0.01847222,\"1804\":0.017517272,\"1805\":0.01...\n",
-       "8       4    6         1  {\"sum_\":-37.854675800000024,\"sumSq_\":44.348257...  {\"8\":0.01811665,\"21\":0.01811665,\"24\":-0.027957...\n",
-       "9      -1   -1        -1  {\"classifier\":\"CLASSIFICATION\",\"lossType\":\"SOF...                                                   "
+       "   idx  hasdiabetes prediction  confidence_lower  confidence_upper\n",
+       "0  602            0          1               1.0               1.0\n",
+       "1  604            1          1               1.0               1.0\n",
+       "2  605            0          0               1.0               1.0\n",
+       "3  606            1          1               1.0               1.0\n",
+       "4  608            0          0               1.0               1.0\n",
+       "5  609            0          0               1.0               1.0\n",
+       "6  607            0          0               1.0               1.0\n",
+       "7  603            1          0               1.0               1.0\n",
+       "8  601            0          0               1.0               1.0\n",
+       "9  600            0          0               1.0               1.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.head()"
+    "xgb_predicted.result.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,12 +493,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT * FROM ConfusionMatrix(\n",
+      "\tON \"pima_predictions\" AS \"input\"\n",
+      "\tPARTITION BY 1\n",
+      "\tOUT TABLE CountTable(VANTAGEDB.ml__td_confusionmatrix0_1570180884761076)\n",
+      "\tOUT TABLE StatTable(VANTAGEDB.ml__td_confusionmatrix1_1570180213256556)\n",
+      "\tOUT TABLE AccuracyTable(VANTAGEDB.ml__td_confusionmatrix2_1570181244596058)\n",
+      "\tUSING\n",
+      "\tObservationColumn('hasdiabetes')\n",
+      "\tPredictColumn('prediction')\n",
+      ") as sqlmr\n",
+      "                    key             value\n",
+      "0  Mcnemar Test P-Value            0.2801\n",
+      "1       Null Error Rate            0.3571\n",
+      "2                 Kappa            0.4389\n",
+      "3              Accuracy              0.75\n",
+      "4   P-Value [Acc > NIR]             0.002\n",
+      "5                95% CI  (0.6775, 0.8135)\n"
+     ]
+    }
+   ],
    "source": [
-    "summary = DataFrame.from_query(\n",
-    "    \"SELECT count(*) as match FROM pima_predictions WHERE HasDiabetes = CAST(prediction AS BIGINT)\")"
+    "from teradataml.analytics.mle import ConfusionMatrix\n",
+    "\n",
+    "cm = ConfusionMatrix(data=DataFrame(\"pima_predictions\"),\n",
+    "                      reference='hasdiabetes',\n",
+    "                      prediction='prediction')\n",
+    "\n",
+    "print(cm.stattable)"
    ]
   },
   {
@@ -505,157 +536,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "matched values: 123\n",
-      "Accuracy: 0.7321428571428571\n"
-     ]
-    }
-   ],
-   "source": [
-    "matches = summary.to_pandas()[\"match\"].values[0]\n",
-    "accuracy = matches / df_test.shape[0]\n",
-    "print(\"matched values: {}\".format(matches))\n",
-    "print(\"Accuracy: {}\".format(accuracy))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tree_id</th>\n",
-       "      <th>iter</th>\n",
-       "      <th>class_num</th>\n",
-       "      <th>tree</th>\n",
-       "      <th>region_prediction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{\"sum_\":-29.045081319999966,\"sumSq_\":39.618276...</td>\n",
-       "      <td>{\"1024\":-0.06223235,\"257\":0.01595805,\"1025\":-0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{\"sum_\":-38.751830049999995,\"sumSq_\":56.425578...</td>\n",
-       "      <td>{\"256\":-0.016835004,\"257\":-0.027845753,\"1794\":...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{\"sum_\":-41.81249375000001,\"sumSq_\":65.7605853...</td>\n",
-       "      <td>{\"1280\":-0.07825828,\"256\":-0.030333642,\"257\":-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>{\"sum_\":33.074478269999986,\"sumSq_\":40.7221672...</td>\n",
-       "      <td>{\"512\":0.014163062,\"1026\":0.036016546,\"514\":0....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>{\"sum_\":33.071585080000006,\"sumSq_\":46.1632995...</td>\n",
-       "      <td>{\"1024\":0.04723227,\"1025\":0.016098328,\"1026\":0...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   tree_id  iter  class_num  \\\n",
-       "0        2     8          1   \n",
-       "1        3     4          1   \n",
-       "2        3     2          1   \n",
-       "3        3     9          0   \n",
-       "4        2     6          0   \n",
-       "\n",
-       "                                                tree  \\\n",
-       "0  {\"sum_\":-29.045081319999966,\"sumSq_\":39.618276...   \n",
-       "1  {\"sum_\":-38.751830049999995,\"sumSq_\":56.425578...   \n",
-       "2  {\"sum_\":-41.81249375000001,\"sumSq_\":65.7605853...   \n",
-       "3  {\"sum_\":33.074478269999986,\"sumSq_\":40.7221672...   \n",
-       "4  {\"sum_\":33.071585080000006,\"sumSq_\":46.1632995...   \n",
-       "\n",
-       "                                   region_prediction  \n",
-       "0  {\"1024\":-0.06223235,\"257\":0.01595805,\"1025\":-0...  \n",
-       "1  {\"256\":-0.016835004,\"257\":-0.027845753,\"1794\":...  \n",
-       "2  {\"1280\":-0.07825828,\"256\":-0.030333642,\"257\":-...  \n",
-       "3  {\"512\":0.014163062,\"1026\":0.036016546,\"514\":0....  \n",
-       "4  {\"1024\":0.04723227,\"1025\":0.016098328,\"1026\":0...  "
+       "                measure       0       1\n",
+       "0        Detection Rate  0.5417  0.2083\n",
+       "1           Sensitivity  0.8426  0.5833\n",
+       "2        Pos Pred Value  0.7845  0.6731\n",
+       "3            Prevalence  0.6429  0.3571\n",
+       "4  Detection Prevalence  0.6905  0.3095\n",
+       "5     Balanced Accuracy   0.713   0.713\n",
+       "6        Neg Pred Value  0.6731  0.7845\n",
+       "7           Specificity  0.5833  0.8426"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_artefact = xgb.model_table.to_pandas()\n",
-    "# we can persist this outside of TD if we like and import later etc. i.e. we can manage the model\n",
-    "model_artefact.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch issue-105\r\n",
-      "Your branch is up to date with 'origin/issue-105'.\r\n",
-      "\r\n",
-      "Changes not staged for commit:\r\n",
-      "  (use \"git add <file>...\" to update what will be committed)\r\n",
-      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\r\n",
-      "\r\n",
-      "\t\u001b[31mmodified:   Explore Diabetes Vantage.ipynb\u001b[m\r\n",
-      "\r\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git status"
+    "cm.accuracytable"
    ]
   },
   {
@@ -663,27 +563,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!git add ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git commit -m \"my demo changes\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git push"
-   ]
+   "source": []
   }
  ],
  "metadata": {
