Issue-106 SQL Model Support (Add to Demo and Templates) (#23)
* add vantage sql model support

--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "Engine(teradatasql://vantagedb:***@tddb-env-d-425.vantage.demo.intellicloud.teradata.com)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,20 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x1194a73c8>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get_connection().execute(\"DROP TABLE PIMA_TEST\")"
    ]
@@ -132,7 +121,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>6</td>\n",
        "      <td>148</td>\n",
        "      <td>72</td>\n",
@@ -144,7 +133,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>85</td>\n",
        "      <td>66</td>\n",
@@ -156,7 +145,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>8</td>\n",
        "      <td>183</td>\n",
        "      <td>64</td>\n",
@@ -168,7 +157,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>89</td>\n",
        "      <td>66</td>\n",
@@ -180,7 +169,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>137</td>\n",
        "      <td>40</td>\n",
@@ -222,9 +211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/site-packages/teradataml/dataframe/copy_to.py:632: FutureWarning: The 'get_values' method is deprecated and will be removed in a future version. Use '.to_numpy()' or '.array' instead.\n",
+      "  df_columns = df.columns.get_values().tolist()\n"
+     ]
+    }
+   ],
    "source": [
     "copy_to_sql(df = df.iloc[:600], table_name = \"PIMA_TRAIN\", index=True, index_label=\"idx\", if_exists=\"replace\")\n",
     "copy_to_sql(df = df.iloc[600:], table_name = \"PIMA_TEST\", index=True, index_label=\"idx\", if_exists=\"replace\")"
@@ -232,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +248,7 @@
        "(600, 10)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,17 +267,17 @@
       "text/plain": [
        "      numtimesprg plglcconc  bloodp skinthick twohourserins     bmi dipedfunc     age hasdiabetes      idx\n",
        "func                                                                                                      \n",
-       "max            17       198     122        99           846    67.1      2.42      81           1      599\n",
-       "std         3.362    32.658   19.36    16.005       116.491    8.01      .337  11.822        .476  173.349\n",
        "25%             1        99      64         0             0  27.075      .248      24           0   149.75\n",
-       "50%             3       116      70        23          36.5      32      .384      29           0    299.5\n",
        "75%             6       140      80        32        122.75  36.525      .647      40           1   449.25\n",
-       "mean         3.82   120.135  68.682    20.558        79.528  31.905      .481  33.278        .347    299.5\n",
+       "count         600       600     600       600           600     600       600     600         600      600\n",
        "min             0         0       0         0             0       0      .078      21           0        0\n",
-       "count         600       600     600       600           600     600       600     600         600      600"
+       "max            17       198     122        99           846    67.1      2.42      81           1      599\n",
+       "50%             3       116      70        23          36.5      32      .384      29           0    299.5\n",
+       "std         3.362    32.658   19.36    16.005       116.491    8.01      .337  11.822        .476  173.349\n",
+       "mean         3.82   120.135  68.682    20.558        79.528  31.905      .481  33.278        .347    299.5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,16 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1604f7f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a225095f8>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -332,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +380,7 @@
      "text": [
       "SELECT * FROM XGBoost(\n",
       "\tON \"PIMA_TRAIN\" AS InputTable\n",
-      "\tOUT TABLE OutputTable(VANTAGEDB.ml__td_xgboost0_1570180302623354)\n",
+      "\tOUT TABLE OutputTable(VANTAGEDB.ml__td_xgboost0_1571619104775578)\n",
       "\tUSING\n",
       "\tIdColumn('idx')\n",
       "\tMaxDepth('10')\n",
@@ -390,15 +388,15 @@
       "\tNumericInputs('numtimesprg','plglcconc','bloodp','skinthick','twohourserins','bmi','dipedfunc','age')\n",
       ") as sqlmr\n",
       "   tree_id  iter  class_num                                               tree                                  region_prediction\n",
-      "0        3     8          0  {\"sum_\":56.02086118000002,\"sumSq_\":76.57277944...  {\"1024\":0.061396465,\"1025\":0.015982764,\"514\":0...\n",
-      "1        3     6          1  {\"sum_\":-63.83015737999998,\"sumSq_\":90.3921232...  {\"1024\":-0.06717814,\"1025\":-0.016580526,\"514\":...\n",
-      "2        3     7          0  {\"sum_\":59.76545767999994,\"sumSq_\":82.95112083...  {\"1024\":0.06407021,\"1025\":0.01627749,\"1026\":0....\n",
-      "3        3     4          1  {\"sum_\":-72.56045164999999,\"sumSq_\":107.579594...  {\"1024\":-0.055251826,\"1025\":-0.047791496,\"1026...\n",
-      "4        3     4          0  {\"sum_\":72.56045149000008,\"sumSq_\":107.5795949...  {\"1024\":0.055251826,\"1025\":0.047791507,\"1026\":...\n",
-      "5        3     3          1  {\"sum_\":-77.01988000000006,\"sumSq_\":117.288007...  {\"1024\":-0.056000292,\"513\":-0.02812668,\"1025\":...\n",
-      "6        3    10          0  {\"sum_\":48.758744500000006,\"sumSq_\":65.8426560...  {\"1024\":0.05200237,\"1025\":0.017639743,\"258\":0....\n",
-      "7        3     5          0  {\"sum_\":68.38344050000003,\"sumSq_\":98.87712542...  {\"1024\":0.07084968,\"1025\":0.016892144,\"1026\":0...\n",
-      "8        3     9          1  {\"sum_\":-52.56896038000002,\"sumSq_\":70.9917271...  {\"1024\":-0.05906244,\"1025\":-0.015696079,\"1026\"...\n",
+      "0        3     5          1  {\"sum_\":-68.38343786999995,\"sumSq_\":98.8771254...  {\"1024\":-0.07084968,\"1025\":-0.016892146,\"1026\"...\n",
+      "1        3     8          0  {\"sum_\":56.02086118000002,\"sumSq_\":76.57277944...  {\"1024\":0.061396465,\"1025\":0.015982764,\"514\":0...\n",
+      "2        3    10          0  {\"sum_\":48.758744500000006,\"sumSq_\":65.8426560...  {\"1024\":0.05200237,\"1025\":0.017639743,\"258\":0....\n",
+      "3        3     6          0  {\"sum_\":63.830157449999945,\"sumSq_\":90.3921242...  {\"1024\":0.067178145,\"1025\":0.016580524,\"1026\":...\n",
+      "4        3     6          1  {\"sum_\":-63.83015737999998,\"sumSq_\":90.3921232...  {\"1024\":-0.06717814,\"1025\":-0.016580526,\"514\":...\n",
+      "5        3     5          0  {\"sum_\":68.38344050000003,\"sumSq_\":98.87712542...  {\"1024\":0.07084968,\"1025\":0.016892144,\"1026\":0...\n",
+      "6        3     4          0  {\"sum_\":72.56045149000008,\"sumSq_\":107.5795949...  {\"1024\":0.055251826,\"1025\":0.047791507,\"1026\":...\n",
+      "7       -1    -1         -1  {\"classifier\":\"CLASSIFICATION\",\"lossType\":\"SOF...                                                   \n",
+      "8        3     8          1  {\"sum_\":-56.02085948,\"sumSq_\":76.5727789245714...  {\"1024\":-0.061396476,\"1025\":-0.015982762,\"1026...\n",
       "9        3     9          0  {\"sum_\":52.568961549999976,\"sumSq_\":70.9917259...  {\"1024\":0.05906244,\"1025\":0.015696079,\"1026\":0...\n"
      ]
     }
@@ -421,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -473,7 +471,7 @@
        "9  600            0          0               1.0               1.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -503,9 +501,9 @@
       "SELECT * FROM ConfusionMatrix(\n",
       "\tON \"pima_predictions\" AS \"input\"\n",
       "\tPARTITION BY 1\n",
-      "\tOUT TABLE CountTable(VANTAGEDB.ml__td_confusionmatrix0_1570180884761076)\n",
-      "\tOUT TABLE StatTable(VANTAGEDB.ml__td_confusionmatrix1_1570180213256556)\n",
-      "\tOUT TABLE AccuracyTable(VANTAGEDB.ml__td_confusionmatrix2_1570181244596058)\n",
+      "\tOUT TABLE CountTable(VANTAGEDB.ml__td_confusionmatrix0_1571618608459979)\n",
+      "\tOUT TABLE StatTable(VANTAGEDB.ml__td_confusionmatrix1_1571618857350855)\n",
+      "\tOUT TABLE AccuracyTable(VANTAGEDB.ml__td_confusionmatrix2_1571619494337291)\n",
       "\tUSING\n",
       "\tObservationColumn('hasdiabetes')\n",
       "\tPredictColumn('prediction')\n",
