--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get_connection().execute(\"DROP TABLE PIMA_TEST\")"
+    "#get_connection().execute(\"DROP TABLE AO\")"
    ]
   },
   {
