--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
@@ -32,7 +32,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -54,10 +58,10 @@
     }
    ],
    "source": [
-    "host = \"tddb-env-d-425.vantage.demo.intellicloud.teradata.com\"\n",
+    "host = \"tdprd2.td.teradata.com\"\n",
     "username = input(\"Username: \")\n",
     "password = getpass.getpass(\"Password:\")\n",
-    "create_context(host=host, username=username, password=password)"
+    "create_context(host=host, username=username, password=password, logmech=\"TDNEGO\")"
    ]
   },
   {
@@ -580,7 +584,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
