issue #197 rename to metrics.json

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
@@ -1274,7 +1274,7 @@
     "    \n",
     "    print(scores)\n",
     "\n",
-    "    with open(\"models/metric.json\", \"w+\") as f:\n",
+    "    with open(\"models/metrics.json\", \"w+\") as f:\n",
     "        json.dump(scores, f)\n"
    ]
   },
