--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
@@ -1168,29 +1168,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting training...\n",
-      "Finished training\n",
-      "Saved trained model\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/wf250003/anaconda3/envs/caixa/bin/aoa\", line 144, in <module>\n",
+      "    main()\n",
+      "  File \"/Users/wf250003/anaconda3/envs/caixa/bin/aoa\", line 29, in main\n",
+      "    utility = ModelUtility(base_path, template_catalog)\n",
+      "  File \"/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/site-packages/aoa/model_utility/model_utility.py\", line 19, in __init__\n",
+      "    self.catalog, self.custom_catalog = self.get_all_template_catalog(model_template_path)\n",
+      "  File \"/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/site-packages/aoa/model_utility/model_utility.py\", line 91, in get_all_template_catalog\n",
+      "    custom_cat = self.__get_template_catalog(template_path)\n",
+      "  File \"/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/site-packages/aoa/model_utility/model_utility.py\", line 100, in __get_template_catalog\n",
+      "    sub_folders = [f for f in os.listdir(model_template_path)\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '/Users/wf250003/workspace/aoa/AoaDemoModels/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/model_templates/'\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "model_conf = json.load(open(\"../config.json\", \"r\"))\n",
-    "data_conf = {\n",
-    "    \"url\": \"http://nrvis.com/data/mldata/pima-indians-diabetes.csv\",\n",
-    "    \"test_split\": 0.2\n",
-    "}\n",
-    "\n",
-    "train(data_conf, model_conf)"
+    "!aoa --run -id 03c9a01f-bd46-4e7c-9a60-4282039094e6 -m train -d ./../.cli/datasets/train.json"
    ]
   },
   {
