--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
@@ -492,7 +492,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1168,48 +1167,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading and executing model code\n",
       "Starting training...\n",
       "Finished training\n",
-      "Saved trained model\n"
+      "Saved trained model\n",
+      "Artefacts can be found in: .artefacts/03c9a01f-bd46-4e7c-9a60-4282039094e6/\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "model_conf = json.load(open(\"../config.json\", \"r\"))\n",
-    "data_conf = {\n",
-    "    \"url\": \"http://nrvis.com/data/mldata/pima-indians-diabetes.csv\",\n",
-    "    \"test_split\": 0.2\n",
-    "}\n",
-    "\n",
-    "train(data_conf, model_conf)"
+    "!aoa run -id 03c9a01f-bd46-4e7c-9a60-4282039094e6 -m train -d model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/.cli/datasets/train.json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 336\r\n",
-      "-rw-r--r--  1 wf250003  365896978  165750 Aug 29 10:41 model.pkl\r\n",
-      "-rw-r--r--  1 wf250003  365896978     846 Aug 29 10:41 scaler.pkl\r\n"
+      "total 336\n",
+      "-rw-r--r--  1 wf250003  365896978  165750 Apr 14 20:13 model.pkl\n",
+      "-rw-r--r--  1 wf250003  365896978     846 Apr 14 20:13 scaler.pkl\n"
      ]
     }
    ],
    "source": [
-    "!ls -l models"
+    "!ls -l .artefacts/03c9a01f-bd46-4e7c-9a60-4282039094e6/"
    ]
   },
   {
@@ -1225,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,9 +1232,9 @@
     "\n",
     "\n",
     "class ModelScorer(object):\n",
-    "    def __init__(self, config=None):\n",
-    "        self.scaler = pickle.load(open(\"models/scaler.pkl\", 'rb'))\n",
-    "        self.model = pickle.load(open(\"models/model.pkl\", 'rb'))\n",
+    "    def __init__(self, config=None, base_path=\"models\"):\n",
+    "        self.scaler = pickle.load(open(base_path + \"/scaler.pkl\", 'rb'))\n",
+    "        self.model = pickle.load(open(base_path + \"/model.pkl\", 'rb'))\n",
     "\n",
     "    def predict(self, data):\n",
     "        data = self.scaler.transform([data])\n",
@@ -1287,19 +1280,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'accuracy': 73.37662337662337}\n"
+      "Loading and executing model code\n",
+      "(154, 9)\n",
+      "/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n",
+      "Artefacts can be found in: .artefacts/03c9a01f-bd46-4e7c-9a60-4282039094e6\n",
+      "Evaluation metrics can be found in: .artefacts/03c9a01f-bd46-4e7c-9a60-4282039094e6/evaluation.json\n"
      ]
     }
    ],
    "source": [
-    "evaluate(data_conf, model_conf)"
+    "!aoa run -id 03c9a01f-bd46-4e7c-9a60-4282039094e6 -m evaluate -d model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/.cli/datasets/train.json"
    ]
   },
   {
@@ -1311,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1319,89 +1317,27 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "array([1.])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scorer = ModelScorer()\n",
+    "scorer = ModelScorer(base_path=\".artefacts/03c9a01f-bd46-4e7c-9a60-4282039094e6\")\n",
     "scorer.predict([6, 168, 72, 35, 0, 43.6, 0.627, 65])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch issue-80\n",
-      "Your branch is ahead of 'origin/issue-80' by 4 commits.\n",
-      "  (use \"git push\" to publish your local commits)\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
-      "\n",
-      "\t\u001b[31mmodified:   ../../../../README.md\u001b[m\n",
-      "\t\u001b[31mmodified:   Explore Diabetes.ipynb\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[issue-80 1ebf0ce] demo\r\n",
-      " 2 files changed, 4 insertions(+), 9 deletions(-)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git commit -a -m \"demo\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counting objects: 8, done.\n",
-      "Delta compression using up to 8 threads.\n",
-      "Compressing objects: 100% (8/8), done.\n",
-      "Writing objects: 100% (8/8), 1.34 KiB | 1.34 MiB/s, done.\n",
-      "Total 8 (delta 4), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
-      "To https://github.com/ThinkBigAnalytics/AoaModels.git\n",
-      "   a674015..de8dd82  vantage -> vantage\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git push"
    ]
   },
   {
@@ -1439,5 +1375,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
