simplify scoring logic

--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
@@ -39,17 +39,17 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Username: vantagedb\n",
-      "Password:········\n"
+      "Username:  wf250003\n",
+      "Password: ···········\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Engine(teradatasql://vantagedb:***@tddb-env-d-425.vantage.demo.intellicloud.teradata.com)"
+       "Engine(teradatasql://wf250003:***@tdprd2.td.teradata.com/?LOGMECH=TDNEGO)"
       ]
      },
      "execution_count": 3,
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4   33            1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "(600, 10)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,17 +271,17 @@
       "text/plain": [
        "      numtimesprg plglcconc  bloodp skinthick twohourserins     bmi dipedfunc     age hasdiabetes      idx\n",
        "func                                                                                                      \n",
-       "25%             1        99      64         0             0  27.075      .248      24           0   149.75\n",
-       "75%             6       140      80        32        122.75  36.525      .647      40           1   449.25\n",
-       "count         600       600     600       600           600     600       600     600         600      600\n",
-       "min             0         0       0         0             0       0      .078      21           0        0\n",
        "max            17       198     122        99           846    67.1      2.42      81           1      599\n",
-       "50%             3       116      70        23          36.5      32      .384      29           0    299.5\n",
        "std         3.362    32.658   19.36    16.005       116.491    8.01      .337  11.822        .476  173.349\n",
-       "mean         3.82   120.135  68.682    20.558        79.528  31.905      .481  33.278        .347    299.5"
+       "25%             1        99      64         0             0  27.075      .248      24           0   149.75\n",
+       "50%             3       116      70        23          36.5      32      .384      29           0    299.5\n",
+       "75%             6       140      80        32        122.75  36.525      .647      40           1   449.25\n",
+       "mean         3.82   120.135  68.682    20.558        79.528  31.905      .481  33.278        .347    299.5\n",
+       "min             0         0       0         0             0       0      .078      21           0        0\n",
+       "count         600       600     600       600           600     600       600     600         600      600"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,5 +597,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
